Update 49_vowelCount(stream).java